--- a/index.html
+++ b/index.html
@@ -24,198 +24,173 @@
         <p class="mb-4">
         By day, I'm a <a href="https://www.robalexdev.com">freelance DevSecOps Engineer</a> who is always looking to meet great new clients.
         <p class="mb-4">
-        I occasionally post on <a rel="me" href="https://indieweb.social/@robalex">Mastodon</a>.
+        I occasionally post on
+        <a rel="me" href="https://alexsci.com/blog/">my blog</a>
+        and
+        <a rel="me" href="https://indieweb.social/@robalex">Mastodon</a>.
         <p>
         Enjoy.
       </div>
     </section>
 
     <section class="section">
+
+
       <div class="columns">
+      <div class="column">
+        <h1 class="title is-1">Projects</a>
 
-        <div class="column is-one-third p-4">
-          <article class="panel is-primary">
-            <div class="panel-heading">
-              <p class="is-centered">Blog</p>
-            </div>
-            <div class="panel-block">A blog</div>
-            <a class="panel-block" href="https://alexsci.com/blog/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/blog/">Code</a>
-          </article>
-        </div>
 
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">RSS Blogroll Network</p>
-            </div>
-            <p class="panel-block">Mapping project for RSS, Atom, and OPML blogrolls.</p>
-            <a class="panel-block" href="https://alexsci.com/rss-blogroll-network/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/rss-blogroll-network">Code</a>
-          </article>
+        <section class="hero">
+        <div class="hero-body">
+        <p class="title">
+          RSS Blogroll Network
+        </p>
+        <p class="subtitle">
+          <a class="is-underlined" href="https://alexsci.com/rss-blogroll-network/">Open</a> |
+          <a class="is-underlined" href="https://alexsci.com/blog/blogroll-network/">Blog Post</a> |
+          <a class="is-underlined" href="https://github.com/ralexander-phi/rss-blogroll-network">Code</a>
+        </p>
+        <p class="subtitle">
+          The RSS Blogroll Network maps blogs using blogrolls and microformats
+        </p>
         </div>
+        </section>
 
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Marp Action for GitHub</p>
-            </div>
-            <p class="panel-block">Instantly host markdown presentations using GitHub Pages.</p>
-            <a class="panel-block" href="https://alexsci.com/test-marp-action/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/marp-to-pages/">Code</a>
-          </article>
+        <section class="hero">
+        <div class="hero-body">
+        <p class="title">
+          getlocalcert.net
+        </p>
+        <p class="subtitle">
+          <a class="is-underlined" href="https://www.getlocalcert.net/">Open</a> |
+          <a class="is-underlined" href="https://console.getlocalcert.net/">Console</a>
+        </p>
+        <p class="subtitle">
+          Generate Let's Encrypt certificates for your private network
+        </p>
         </div>
+        </section>
+
+
+
+        <section class="hero">
+        <div class="hero-body">
+        <p class="title">
+          Relicensing Monitor
+        </p>
+        <p class="subtitle">
+          <a class="is-underlined" href="https://alexsci.com/relicensing-monitor/">View</a> |
+          <a class="is-underlined" href="https://github.com/ralexander-phi/relicensing-monitor">Code</a>
+        </p>
+        <p class="subtitle">
+          Track open source rug-pull risks.
+        </p>
+        </div>
+        </section>
+
+
+
+        <section class="hero">
+        <div class="hero-body">
+        <p class="title">
+          License Approval GitHub Actions
+        </p>
+        <p class="subtitle">
+          <a class="is-underlined" href="https://github.com/marketplace/actions/license-approval">Learn More</a> |
+          <a class="is-underlined" href="https://github.com/ralexander-phi/license_approval">Code</a>
+        </p>
+        <p class="subtitle">
+          Track and approve the licenses your project uses.
+        </p>
+        </div>
+        </section>
+
+
+
+        <section class="hero">
+        <div class="hero-body">
+        <p class="title">
+          Marp Action for GitHub
+        </p>
+        <p class="subtitle">
+          <a class="is-underlined" href="https://alexsci.com/test-marp-action/">Get Started</a> |
+          <a class="is-underlined" href="https://github.com/ralexander-phi/marp-to-pages/">Code</a>
+        </p>
+        <p class="subtitle">
+          Instantly host markdown presentations using GitHub Pages.
+        </p>
+        </div>
+        </section>
+
+
       </div>
+      <div class="column">
+        <h1 class="title is-1">Mini Projects</a>
 
-      <div class="columns">
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">License Approval GitHub Actions</p>
-            </div>
-            <p class="panel-block">Track and approve the licenses your project uses.</p>
-            <a class="panel-block" href="https://github.com/marketplace/actions/license-approval">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/license_approval">Code</a>
-          </article>
+        <section class="hero">
+        <div class="hero-body">
+        <p class="title">
+          Relax
+        </p>
+        <p class="subtitle">
+          <a class="is-underlined" href="https://alexsci.com/relax/">Start Relaxing</a> |
+          <a class="is-underlined" href="https://github.com/ralexander-phi/relax">Code</a>
+        </p>
+        <p class="subtitle">
+          A minimal white noise progressive web app.
+        </p>
         </div>
+        </section>
 
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Relicensing Monitor</p>
-            </div>
-            <p class="panel-block">Track open source rug-pull risks.</p>
-            <a class="panel-block" href="https://alexsci.com/relicensing-monitor/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/relicensing-monitor">Code</a>
-          </article>
-        </div>
 
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">LocalStorage Music</p>
-            </div>
-            <div class="panel-block">A simple PWA music player using the browsers local storage</div>
-            <a class="panel-block" href="https://alexsci.com/localstorage-music/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/localstorage-music">Code</a>
-          </article>
+
+        <section class="hero">
+        <div class="hero-body">
+        <p class="title">
+          Weekly Chore Tracker
+        </p>
+        <p class="subtitle">
+          <a class="is-underlined" href="https://alexsci.com/chore-wheel/">Start Planning</a> |
+          <a class="is-underlined" href="https://alexsci.com/blog/personal-apps/">Blog Post</a> |
+          <a class="is-underlined" href="https://github.com/ralexander-phi/chore-wheel">Code</a>
+        </p>
+        <p class="subtitle">
+          A simple weekly chore tracker.
+        </p>
         </div>
+        </section>
+
+
+        <section class="hero">
+        <div class="hero-body">
+        <p class="title">
+          Which License
+        </p>
+        <p class="subtitle">
+          <a class="is-underlined" href="https://alexsci.com/which-license/">Open</a> |
+          <a class="is-underlined" href="https://github.com/ralexander-phi/which-license">Code</a>
+        </p>
+        <p class="subtitle">
+          Identify common software licenses.
+        </p>
+        </div>
+        </section>
+
+
+        <section class="hero">
+        <div class="hero-body">
+        <p class="title">Games for Toddlers</p>
+        <p class="subtitle">
+          <a class="is-underlined" href="https://alexsci.com/games/">Play</a> |
+          <a class="is-underlined" href="https://github.com/ralexander-phi/games">Code</a>
+        </p>
+        <p class="subtitle">
+          Help toddlers learn basic computer skills with simple games.
+        </p>
+        </div>
+        </section>
       </div>
-
-      <div class="columns">
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Relax</p>
-            </div>
-            <p class="panel-block">A minimal white noise progressive web app.</p>
-            <a class="panel-block" href="https://alexsci.com/relax/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/relax">Code</a>
-          </article>
-        </div>
-        
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Weekly Chore Tracker</p>
-            </div>
-            <p class="panel-block">A simple weekly chore tracker.</p>
-            <a class="panel-block" href="https://alexsci.com/chore-wheel/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/chore-wheel">Code</a>
-          </article>
-        </div>
-
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Which License</p>
-            </div>
-            <p class="panel-block">Identify common software licenses.</p>
-            <a class="panel-block" href="https://alexsci.com/which-license/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/which-license">Code</a>
-          </article>
-        </div>
-      </div>
-
-      <div class="columns">
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Games for Toddlers</p>
-            </div>
-            <p class="panel-block">Help toddlers learn basic computer skills with simple games.</p>
-            <a class="panel-block" href="https://alexsci.com/games/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/games">Code</a>
-          </article>
-        </div>
-
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">GitHub</p>
-            </div>
-            <p class="panel-block">Source code for these projects &amp; more.</p>
-            <a class="panel-block" href="https://github.com/ralexander-phi/">Open</a>
-          </article>
-        </div>
-
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Audible Website Ping</p>
-            </div>
-            <p class="panel-block">Check Internet connectivity in your browser, with sound.</p>
-            <a class="panel-block" href="https://alexsci.com/web-audible-ping/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/web-audible-ping">Code</a>
-          </article>
-        </div>
-      </div>
-
-      <div class="columns">
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">PLU code hero</p>
-            </div>
-            <p class="panel-block">Product lookup code game</p>
-            <a class="panel-block" href="https://alexsci.com/plu-code-hero/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/plu-code-hero">Code</a>
-          </article>
-        </div>
-
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Windows Semaphore using ctypes</p>
-            </div>
-            <p class="panel-block">A ctypes wrapper for Windows Semaphore Objects</p>
-            <a class="panel-block" href="https://pypi.org/project/semaphore-win-ctypes/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/semaphore_win_ctypes">Code</a>
-          </article>
-        </div>
-
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Health Check Dashboard</p>
-            </div>
-            <p class="panel-block">A client-side health check dashboard</p>
-            <a class="panel-block" href="https://alexsci.com/host-reachability-check/">Open</a>
-            <a class="panel-block" href="https://github.com/ralexander-phi/host-reachability-check">Code</a>
-          </article>
-        </div>
-      </div>
-
-      <div class="columns">
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">GitHub Repo Bulk Clone</p>
-            </div>
-            <p class="panel-block">A tool to bulk clone all repos in a GitHub organization</p>
-            <a class="panel-block" href="https://github.com/robalexdev/github-bulk-clone-tool">Code</a>
-          </article>
-        </div>
       </div>
 
     </section>
