Add disclaimer, remove getlocalcert

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
         <p class="mb-4">
         I use this site for my non-serious side.
         Here you'll find my blog and numerous mini-projects.
-        I'm also the operator of <a href="https://www.getlocalcert.net/">getlocalcert.net</a>.
-        <p class="mb-4">
-        By day, I'm a <a href="https://www.robalexdev.com">freelance DevSecOps Engineer</a> who is always looking to meet great new clients.
         <p class="mb-4">
         I occasionally post on
         <a rel="me" href="https://alexsci.com/blog/">my blog</a>
         and
         <a rel="me" href="https://indieweb.social/@robalex">Mastodon</a>.
-        <p>
+        <p class="mb-4">
+        <b>Statements are my own and do not represent the positions or opinions of my employer.</b>
+        <p class="mb-4">
         Enjoy.
       </div>
     </section>
@@ -53,21 +52,6 @@
         </p>
         <p class="subtitle">
           The RSS Blogroll Network maps blogs using blogrolls and microformats
-        </p>
-        </div>
-        </section>
-
-        <section class="hero">
-        <div class="hero-body">
-        <p class="title">
-          getlocalcert.net
-        </p>
-        <p class="subtitle">
-          <a class="is-underlined" href="https://www.getlocalcert.net/">Open</a> |
-          <a class="is-underlined" href="https://console.getlocalcert.net/">Console</a>
-        </p>
-        <p class="subtitle">
-          Generate Let's Encrypt certificates for your private network
         </p>
         </div>
         </section>
