Web ring, h-card?

--- a/index.html
+++ b/index.html
@@ -22,16 +22,21 @@
 
       <section class="section is-size-4">
         <p class="mb-4">
-        <span class="has-text-weight-bold">Hello!</span> I'm Robert.
+        <div class="h-card">
+        <span class="has-text-weight-bold">Hello!</span>
+
+        I'm <span class="p-given-name">Robert</span>.
+        
         <p class="mb-4">
         I use this site for my personal hobby projects.
         <p class="mb-4">
         Feel free to reach out if our interests align at
         <span id="email">(enable JS)</span>
         or on
-        <a class="is-underlined" rel="me" href="https://indieweb.social/@robalex">Mastodon</a>.
+        <a class="u-url is-underlined" rel="me" href="https://indieweb.social/@robalex">Mastodon</a>.
         <p class="mb-4">
         Enjoy.
+        </div>
       </section>
 
       <div class="notification">
@@ -47,6 +52,14 @@
           </p>
         </div>
       </div>
+
+      <section>
+        <center>
+        <a href="https://xn--sr8hvo.ws/previous">←</a>
+        An <a href="https://xn--sr8hvo.ws">IndieWeb Webring</a> 🕸💍
+        <a href="https://xn--sr8hvo.ws/next">→</a>
+        </center>
+      </section>
 
 
       <h1 class="title pt-6">Projects</h1>
