--- a/index.html
+++ b/index.html
@@ -23,19 +23,22 @@
       <section class="section is-size-4">
         <p class="mb-4">
         <div class="h-card">
+        <div class="p-note">
         <span class="has-text-weight-bold">Hello!</span>
 
         I'm <span class="p-given-name">Robert</span>.
         
         <p class="mb-4">
-        I use this site for my personal hobby projects.
+        I use this site for blogging and my personal hobby projects.
         <p class="mb-4">
         Feel free to reach out if our interests align at
         <span id="email">(enable JS)</span>
         or on
         <a class="u-url is-underlined" rel="me" href="https://indieweb.social/@robalex">Mastodon</a>.
+        <a class="u-url" style="display:none" href="https://alexsci.com">Website</a>
         <p class="mb-4">
         Enjoy.
+        </div>
         </div>
       </section>
 
